Fixed text clipping over two lines

--- a/wordoftheday/css/style.css
+++ b/wordoftheday/css/style.css
@@ -10,7 +10,7 @@ body {
 	font-size: 400%;
 	font-size: 4vw;
 	font-weight: 400;
-	line-height: .5;
+	line-height: 1;
 }
 .header {
 	text-align: left;
